# z88-recreation

./: .gitignore  README.md
3d_prints/application_board_mount/: application_board_mount.3mf  application_board_mount.scad  application_board_mount.stl
3d_prints/battery_dummy/eemb/: eemb.scad  eemb_103395.stl  eemb_675776.stl
3d_prints/display_mount/: display_mount.3mf  display_mount.scad  display_mount.stl
3d_prints/display_mount_two_side_displays/: display_mount_two_side_displays.3mf  display_mount_two_side_displays.scad  display_mount_two_side_displays.stl
3d_prints/new_bezel/: new-bezel1.3mf  new-bezel1.scad  new-bezel1.stl
documents/display/: #JD9365_Initial.TXT#  .#JD9365_Initial.TXT  JD9365_Initial.TXT
documents/pcb_design/: v1.0_block_design.odg
documents/service_manual/: adaptest.htm  archi.htm  assemb.htm  blank.htm  builtstd.htm  descrip.htm  diagintr.htm  disass2.htm  disassem.htm  display.htm  eprprog.htm  equipint.htm  equipmt.htm  fault.htm  fault2.htm  index.htm  intro.htm  keybd.htm  memorg.htm  parts.htm  parts2.htm  power.htm  ram32mod.htm  release.htm  repair.htm  rs232.htm  safety.htm  sernumb.htm  smlog.txt  sysclock.htm  sysintro.htm  systest.htm  systest2.htm  testintr.htm  z80cpu.htm
hardware/pcb/main-board/: audio.kicad_sch  cm4_gpio.kicad_sch  cm4_highspeed.kicad_sch  displays.kicad_sch  ebay_sd_card.kicad_sym  errata.txt  keyboard.kicad_sch  power.kicad_sch  rtc.kicad_sch  support_pico.kicad_sch  swdmux.kicad_sch  z88_new.kicad_pcb  z88_new.kicad_prl  z88_new.kicad_pro  z88_new.kicad_sch  z88r_power.kicad_sym
hardware/pcb/main-board/NC7WZ16P6X/: NC7WZ16P6X.kicad_sym  SOT65P210X110-6N.kicad_mod
prototypes/keyboard/pico_test/: CMakeLists.txt  README.md  main.c
prototypes/keyboard/qmk/: readme.md  z88r_default.uf2
prototypes/keyboard/qmk/z88r/: config.h  info.json
software/scripts/kernel/: build_z88r_kernel.sh  panel-cwu50.c  rpi_kernel.patch
software/scripts/misc/: waggle_cm4_gpio.py
software/scripts/support-pico/: upload_support_pico_elf.sh
software/scripts/zesarux/: build_zesarux.sh
software/support-pico/pico-rtc/: CMakeLists.txt  pico_rtc.c
software/support-pico/pico-sd-card/: CMakeLists.txt  hw_config.c  pico_sd_card.c
software/support-pico/pico-signal-CM4/: CMakeLists.txt  pico_signal_cm4.c
software/support-pico/pico-uart/: CMakeLists.txt  pico_uart.c
(+2 files in other folders)
